syntax = "proto3";
package employee.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.employee.protobuf";
option java_outer_classname = "EmployeeProtobuf";

import "common/shared.proto";

message PEmployee {
  int64 id = 1;
  int64 department_id = 2;
  string full_name = 3;
  int32 age = 4;
  common.protobuf.PPosition position = 5;
}

message PEmployeeResponse {
  PEmployee employee = 1;
}

message PEmployeesResponse {
  repeated PEmployee employees = 1;
}
